--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🍞 ヨンフンバブル保管庫 📱</h1>
+    <h1>🍞 영훈 버블 보관소 📱</h1>
     <div class="link-list">
       <div class="month-toggle" onclick="toggleDays('days-feb')">▶︎ 2023.02</div>
       <div class="day-list" id="days-feb">
