--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>영훈 버블 보관소</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   <style>
     body {
@@ -11,23 +12,26 @@
       font-family: 'DotGothic16', monospace;
       margin: 0;
       padding: 0;
+      font-size: 4.5vw;
+    }
+    @media (min-width: 600px) {
+      body {
+        font-size: 14px;
+      }
     }
     .container {
       max-width: 320px;
       margin: 0 auto;
       padding: 10px;
-      background-color: transparent;
-      border: none;
     }
     h1 {
-      font-size: 16px;
+      font-size: 1.2em;
       text-align: center;
       margin-bottom: 10px;
       border-bottom: 1px dashed #666;
       padding-bottom: 4px;
     }
     .link-list {
-      font-size: 14px;
       line-height: 1.8;
     }
     .month-toggle {
@@ -46,7 +50,7 @@
     }
     .footer {
       margin-top: 20px;
-      font-size: 12px;
+      font-size: 0.9em;
       text-align: center;
       padding-top: 5px;
     }
@@ -63,7 +67,7 @@
       </div>
     </div>
     <div class="footer">
-      💌 あなたは <span style="color:red;">808</span> 人目の訪問者★
+      💌 당신은 <span style="color:red;">808</span>번째 방문자★
     </div>
   </div>
   <script>
